--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -6,6 +6,9 @@
    Typography
    ========================================================================== */
 
+@import url('https://fonts.googleapis.com/css2?family=Georama:wght@400;600&display=swap');
+
+
 $doc-font-size              : 16;
 
 /* paragraph indention */
@@ -14,7 +17,7 @@ $indent-var                 : 1.3em;
 
 /* system typefaces */
 $serif                      : Georgia, Times, serif;
-$sans-serif                 : -apple-system, ".SFNSText-Regular", "San Francisco", "Roboto", "Segoe UI", "Helvetica Neue", "Lucida Grande", Arial, sans-serif;
+$sans-serif                 : "Georama", -apple-system, ".SFNSText-Regular", "San Francisco", "Roboto", "Segoe UI", "Helvetica Neue", "Lucida Grande", Arial, sans-serif;
 $monospace                  : Monaco, Consolas, "Lucida Console", monospace;
 
 /* sans serif typefaces */
