--- a/_includes/_variables.scss
+++ b/_includes/_variables.scss
@@ -126,7 +126,7 @@ $base03: #546e7a !default;
 $base04: #b2ccd6 !default;
 $base05: #eeffff !default;
 $base06: #eeffff !default;
-$base07: #ffffff !default;
+$base07: #F5F5F5 !default;
 $base08: #f07178 !default;
 $base09: #f78c6c !default;
 $base0a: #ffcb6b !default;
