--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -7,6 +7,7 @@
    ========================================================================== */
 
 @import url('https://fonts.googleapis.com/css2?family=Georama:wght@400;600&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Source+Code+Pro:wght@400;600&display=swap');
 
 
 $doc-font-size              : 16;
@@ -18,7 +19,7 @@ $indent-var                 : 1.3em;
 /* system typefaces */
 $serif                      : Georgia, Times, serif;
 $sans-serif                 : "Georama", -apple-system, ".SFNSText-Regular", "San Francisco", "Roboto", "Segoe UI", "Helvetica Neue", "Lucida Grande", Arial, sans-serif;
-$monospace                  : Monaco, Consolas, "Lucida Console", monospace;
+$monospace                  : "Source Code Pro", Monaco, Consolas, "Lucida Console", monospace;
 
 /* sans serif typefaces */
 $sans-serif-narrow          : "Georama", $sans-serif;
